--- a/notebooks.html
+++ b/notebooks.html
@@ -17,7 +17,7 @@
         <li><a href="rona_scraper.html" alt=RONA>COVID-19 scraper</a></li>
         <li><a href="craigslistscraper.html" alt='craiglist beautifulsoup'>Affordable rental finder<a></li>
         <li><a href="HUDX111.html" alt='bridge shelter client disabilities'>Data prep: City-County client crossmatch<a></li>
-        <li><a href="https://gidexplorer.netlify.com/" alt=pothole>Pothole leaflet.js</a></li>
+        <!-- <li><a href="https://gidexplorer.netlify.com/" alt=pothole>Pothole leaflet.js</a></li> -->
         <li><a href="https://awws-group.github.io/Predicting-Respiratory-Disease-Mortality-From-Air-Quality-Analysis/" alt=AWWS>AWWS bootcamp project</a></li>
         <li><a href="https://la-restaurant-ratings.herokuapp.com/" alt="d3.js leaflet LA la-restaurant-ratings">d3.js leaflet dashboard</a></li>
     </td>
